--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,3 +13,5 @@ services:
         image: grafana/grafana:latest
         ports:
             - "3000:3000"
+        volumes: 
+            - ./grafana:/var/lib/grafana    
